<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.jonas.qrfitness_v12.Routine">


    <EditText
        android:id="@+id/Label_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorLightGray"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/date"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

    <EditText
        android:id="@+id/TV_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Label_Date"
        android:focusable="false"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/Date"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Label_Date" />

    <EditText
        android:id="@+id/Label_Routine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TV_Date"
        android:background="@color/colorLightGray"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/routine"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/TV_Date" />

    <EditText
        android:id="@+id/TV_Routine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Label_Routine"
        android:ems="10"
        android:inputType="textShortMessage"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Label_Routine" />

    <EditText
        android:id="@+id/Label_SetNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:text="@string/set_number"
        android:layout_below="@+id/TV_Routine"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/TV_Routine"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.506" />

    <EditText
        android:id="@+id/TV_SetNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Label_SetNum"
        android:focusable="false"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Label_SetNum"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/Label_NumReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/number_of_reps"
        android:layout_below="@+id/TV_SetNum"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/TV_SetNum"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/TV_Reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/Label_NumReps"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Label_NumReps"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/Label_Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/weight"
        android:layout_below="@+id/TV_Reps"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/TV_Reps"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/TV_Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/Label_Weight"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Label_Weight"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_save_rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TV_Weight"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="50dp"
        android:text="@string/save_rest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/view_db_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_save_rest"
        android:layout_below="@+id/button_save_rest"
        android:text="@string/view_db"
        android:layout_marginRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />


</android.support.constraint.ConstraintLayout>
